# sample-python

./: .gitignore  .python-version  .tool-versions  Pipfile  environment.yml  get_version.py  hello.py  hello_priya.py  hello_world.py  list.py  mypy.ini  performance_test.py  pyproject.toml  requirements.txt  selfhosted.txt  setup.py  thread.py  tk_min.py  version.py
.github/workflows/: allinputs.yml  check-latest.yml  checkversion.yml  checlmatplotlib.yml  compare.yml  pr.yml  python-935.yml  python-app.yml  python-app2.yml  sample.yml  test-1011.yml  test-1021.yml  test-1029.yml  test-1039.yml  test-1040.yml  test-1061.yml  test-1071.yml  test-1079-final.yml  test-1079.yml  test-275-support.yml  test-436.yml  test-649.yml  test-696.yml  test-708-main.yml  test-708-pr.yml  test-721.yml  test-742.yml  test-756.yml  test-769.yml  test-769yml  test-779.yml  test-787.yml  test-789.yml  test-792.yml  test-806.yml  test-824-ENV.yml  test-826-withoutpr.yml  test-826-workaround  test-826.yml  test-833-conda.yml  (+48 more)
.github/workflows/scripts/: rate_limit_test.py
__tests__/: test_tk_min.py
sample_python/: __init__.py
src/: staticType.py
testactiontasks/: __init__.py
