[tool.poetry]
name = "SAMPLE-PYTHON"
description = "Test package to setup python on Github"
requires-python = ">=3.12"
license = ""
keywords = []
authors = [
    "" 
]

[build-system]
requires = ["poetry-core>=1.8.0", "poetry-dynamic-versioning>=1.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = false
strict = true
style = "pep440"
pattern = "default-unprefixed"
tag-branch = "test-897-parse-version"

[tool.poetry-dynamic-versioning.substitution]
folders = [{ path = "." }]
patterns = [
  { value = "(^__version__\\s*(?::.*?)?=\\s*['\"])[^'\"]*(['\"])", mode = "regex" },
  { value = "(^release\\s*(?::.*?)?=\\s*['\"])[^'\"]*(['\"])", mode = "regex" },
  { value = "(^__version_tuple__\\s*(?::.*?)?=\\s*\\()[^)]*(\\))", mode = "tuple" }
]


[tool.poetry.dependencies]
python = "^3.12"